fix alignment 09

--- a/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
+++ b/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
@@ -24,7 +24,7 @@ $icon-height: 16px;
 
 .bpk-breadcrumb-item {
   display: flex;
-  margin-top: tokens.bpk-spacing-sm() / 4;
+  margin-top: tokens.bpk-spacing-sm() / 8;
   align-items: center;
   white-space: nowrap;
 
